java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advFixture/ProtectedFieldUsedInAnnotationParameterOfInheritor.java
import a.A;

@SuppressWarnings(A.<error descr="'A_FOO' has protected access in 'a.A'">A_FOO</error>)
class B extends A {}